# HunterEngine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg  test_bug.py  test_orchestrator.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
ai/: __init__.py  account_testing.py  agentic.py  behavior.py  ephemeral_agent.py  impact.py  local_reasoner.py  ollama_client.py  phase_reasoner.py  testing_agent.py
ai/agents/: __init__.py  active_recon_agent.py  base.py  enum_agent.py  recon_agent.py  vuln_agent.py
ai/subagents/: __init__.py  auth_hunter.py  base.py  cors_hunter.py  idor_hunter.py  jwt_hunter.py  redirect_hunter.py  smuggling_hunter.py  ssrf_hunter.py  ssti_hunter.py  xss_hunter.py
confidence/: __init__.py  correlation_engine.py  scorer.py
config/: scope.yaml  settings.yaml
core/: __init__.py  browser_engine.py  checkpoint.py  methodology.py  orchestrator.py  proxy_engine.py  rate_limiter.py  safety.py  scan_control.py  scope_loader.py  session_manager.py  tool_resolver.py  waf_bypass.py
crawl/: __init__.py  active_crawler.py  auto_navigator.py  graphql_mapper.py  js_analyzer.py  js_crawler.py  param_miner.py
dashboard/: __init__.py  app.py  scan_manager.py
data/checkpoints/: checkpoint_20260721T120733Z_phase.json  checkpoint_20260722T061942Z_phase.json  checkpoint_20260722T062006Z_phase.json  checkpoint_20260722T062008Z_quit.json  checkpoint_20260722T062113Z_phase.json  checkpoint_20260722T062211Z_phase.json  checkpoint_20260722T062213Z_phase.json  checkpoint_20260722T062214Z_error.json  checkpoint_20260722T062214Z_phase.json  checkpoint_20260722T062430Z_done.json  checkpoint_20260722T062430Z_phase.json  checkpoint_20260722T062441Z_done.json  checkpoint_20260722T062445Z_done.json  checkpoint_20260722T062445Z_phase.json  checkpoint_20260722T062452Z_done.json  checkpoint_20260722T062452Z_phase.json  checkpoint_20260722T062518Z_done.json  (+42 more)
detection/: __init__.py  auth_detector.py  base_detector.py  cors_detector.py  crypto_specific.py  csp_analyzer.py  dependency_scanner.py  graphql_detector.py  idor_detector.py  jwt_detector.py  memory_vulns.py  open_redirect.py  prototype_pollution.py  race_condition.py  secrets_detector.py  ssrf_detector.py  subdomain_takeover.py  xss_detector.py
integrations/: __init__.py  claude_desktop_config.example.json  mcp_server.py
knowledge/: __init__.py  rag.py
memory/: __init__.py  domain_learner.py  endpoint_memory.py  param_correlator.py  pattern_store.py  vuln_chaining.py
proxy/: __init__.py  mitm_core.py  replay_engine.py  request_interceptor.py  response_analyzer.py
recon/: __init__.py  dns_resolver.py  historical_urls.py  live_prober.py  subdomain_enum.py  tech_fingerprint.py
reporting/: __init__.py  bugcrowd_formatter.py  h1_formatter.py  triage_report.py
tests/: __init__.py  test_ai_testing.py  test_auto_navigator.py  test_domain_and_health.py  test_mcp_server.py  test_methodology_and_control.py  test_reasoning_and_ui.py  test_reasoning_traces.py  test_scan_control.py
(+2 files in other folders)
