[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hunterengine"
version = "3.2.0"
description = "Automated bug bounty engine with hierarchical agents: recon → active recon → enumeration → nested AI vuln hunters."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "HunterEngine Contributors"},
]
keywords = [
    "bug-bounty",
    "security",
    "reconnaissance",
    "vulnerability-scanner",
    "pentesting",
    "web-security",
    "auto-crawl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    # Core
    "typer[all]>=0.9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "aiosqlite>=0.19",
    "aiofiles>=23.0",
    # HTTP & Networking
    "httpx[http2]>=0.25",
    "requests-toolbelt>=1.0",
    # Browser automation
    "playwright>=1.40",
    # Proxy
    "mitmproxy>=10.0",
    # JWT / Crypto analysis
    "python-jose[cryptography]>=3.3",
    "pyjwt>=2.8",
    "cryptography>=41.0",
    # JS analysis
    "jsbeautifier>=1.14",
    # WAF bypass
    "fake-useragent>=1.4",
    # Reporting
    "Jinja2>=3.1",
    # Async utilities
    "anyio>=4.0",
    # Data processing
    "tldextract>=5.0",
    "validators>=0.22",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "pypdf>=4.0",
    # Dashboard
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
# MCP server — drive HunterEngine from Claude Desktop / Claude Code.
mcp = [
    "mcp>=1.2",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "mypy>=1.5",
    "black>=23.0",
    "isort>=5.12",
    "mcp>=1.2",
]

[project.scripts]
hunterengine = "main:app"

[project.urls]
Homepage = "https://github.com/yourusername/hunterengine"
Repository = "https://github.com/yourusername/hunterengine"
Issues = "https://github.com/yourusername/hunterengine/issues"
Changelog = "https://github.com/yourusername/hunterengine/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = [
    "core*",
    "crawl*",
    "detection*",
    "recon*",
    "ai*",
    "reporting*",
    "memory*",
    "confidence*",
    "proxy*",
    "config*",
    "knowledge*",
    "dashboard*",
    "integrations*",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
